# WaymoCoverageAnalyzer

./: .gitignore  CMakeLists.txt  README.md  build.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
cpp/include/: kinematics.h
cpp/src/: bindings.cpp  kinematics.cpp
cpp/tests/: test_kinematics.cpp
scripts/: benchmark.py  demo.py
tests/: conftest.py  test_clustering.py  test_features.py  test_parser.py  test_perturbation.py
waymo_coverage/: __init__.py  cli.py  clustering.py  dashboard.py  features.py  parser.py  perturbation.py  scenario_pb2.py
